# mono

./: .bazelignore  .bazelrc  .gitignore  BUILD  LICENSE  Makefile  README.md  WORKSPACE  docker-compose.yml  repositories_extra.bzl
.github/: CODEOWNERS
.github/workflows/: bazelisk-cache.yml
android/: .bazelproject  .gitignore  AndroidManifest.xml  BUILD  README.md  WORKSPACE  repositories.bzl
android/app/: BUILD  BUILD.bazel
android/app/src/: BUILD
android/app/src/androidTest/: AndroidManifest.xml  BUILD  BUILD.bazel
android/app/src/androidTest/java/com/veganafro/app/: BUILD  ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/veganafro/mono/: BUILD  ExampleInstrumentedTest.kt
android/app/src/androidTest/java/xyz/fjarm/app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml  BUILD
android/app/src/main/java/com/veganafro/app/: MainActivity.kt
android/app/src/main/java/com/veganafro/mono/: MainActivity.kt
android/app/src/main/java/xyz/fjarm/app/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/test/: BUILD  BUILD.bazel
android/app/src/test/java/com/veganafro/app/: ExampleUnitTest.kt
android/app/src/test/java/com/veganafro/mono/: ExampleUnitTest.kt
android/app/src/test/java/xyz/fjarm/app/: ExampleUnitTest.kt
golang/: .gitignore  BUILD  README.md  buf.yaml  go.mod  go.sum  repositories.bzl  repositories_go.bzl
golang/cmd/currency/: BUILD.bazel  main.go
golang/cmd/dummer/: BUILD.bazel  dummer-all.yaml  dummer-deployment.yaml  dummer-ingress.yaml  dummer-service.yaml  main.go
golang/cmd/dummy/: BUILD.bazel  dummy-all.yaml  dummy-deployment.yaml  dummy-service.yaml  main.go
golang/deploy/dummer/: BUILD.bazel  dummer-serviceaccount.yaml
golang/deploy/dummer/dev/: BUILD.bazel  dummer-deployment.yaml  dummer-service.yaml
golang/deploy/dummer/prod/: BUILD.bazel  dummer-deployment.yaml  dummer-namespace.yaml  dummer-servicedefault.yaml
golang/deploy/dummy/: BUILD.bazel  dummy-deployment.yaml  dummy-servicedefault.yaml
golang/deploy/dummy/dev/: BUILD.bazel  dummy-deployment.yaml  dummy-service.yaml
golang/deploy/dummy/prod/: BUILD.bazel  dummy-deployment.yaml  dummy-ingress.yaml  dummy-namespace.yaml  dummy-serviceaccount.yaml
golang/internal/certs/: BUILD.bazel  ca.go
golang/internal/currency/v1/: BUILD.bazel  currency_repo.go  currency_service.go
golang/internal/dummer/v1/: BUILD.bazel  dummer_service.go  dummer_service_test.go
golang/internal/dummy/v1/: BUILD.bazel  dummy_service.go  dummy_service_test.go
golang/internal/logwrapper/: BUILD.bazel  event.go  logger.go
golang/internal/resolvinator/: BUILD.bazel  builder.go  register.go  resolver.go
golang/pkg/currency/v1/: BUILD.bazel
golang/pkg/dummer/v1/: BUILD.bazel  dummer.go  dummer_service.proto
golang/pkg/dummy/v1/: BUILD.bazel  dummy.proto  dummy_service.proto
helm/: README.md  repositories.bzl
helm/cert-manager/: BUILD.bazel  cert-manager-acme-clusterissuer.yaml  cert-manager-values.yaml
helm/cert-manager/dev/: BUILD.bazel  cert-manager-ca-clusterissuer.yaml
helm/cert-manager/prod/: BUILD.bazel  cert-manager-acme-clusterissuer.yaml  cert-manager-ca-secret.yaml  cert-manager-values.yaml
helm/consul/: BUILD.bazel  README.md  consul-values-dev.yaml  consul-values-prod.yaml  consul-values.yaml
helm/consul/dev/: BUILD.bazel  consul-values.yaml
helm/consul/dev/intentions/: BUILD.bazel  allow-to-dummer-intention.yaml  allow-to-dummy-intention.yaml
helm/consul/intentions/: BUILD.bazel  dummer-to-dummy-allow.yaml
helm/consul/prod/: BUILD.bazel  consul-values.yaml
helm/consul/prod/intentions/: BUILD.bazel
helm/nginx-ingress/: BUILD.bazel  nginx-ingress-values.yaml
helm/nginx-ingress/dev/: BUILD.bazel
helm/nginx-ingress/prod/: BUILD.bazel  nginx-ingress-values.yaml
helm/vault/: BUILD.bazel  README.md  vault-certificate.yaml  vault-values.yaml
ios/: README.md
ios/mono/: .gitignore  project.yml
ios/mono/mono/: ContentView.swift  Info.plist  MonoApp.swift
ios/mono/mono.xcodeproj/: project.pbxproj
ios/mono/mono/app/: AppDelegate.swift  MonoApp.swift
ios/mono/mono/libDummyService/: DummyService.swift
ios/mono/monoTests/: MonoTests.swift
ios/mono/monoUITests/: MonoUITests.swift  MonoUITestsLaunchTests.swift
proto/: .gitignore  BUILD  README.md  buf.yaml  repositories.bzl
proto/currency/v1/: BUILD.bazel  currency.proto  currency_service.proto
proto/dummer/v1/: BUILD.bazel  dummer_service.proto
proto/dummest/v1/: BUILD.bazel  dummest.proto  dummest_service.proto
proto/dummy/v1/: BUILD.bazel  dummy_service.proto
python/: BUILD.bazel  README.md  repositories.bzl  requirements.in  requirements.txt  setup.py
python/notebooks/: BUILD.bazel  enjoyable_econometrics.ipynb  epi.ipynb  hello_world.ipynb  start_local_runtime.py
python/src/: architecture.py
scripts/bash/: gopackagesdriver.sh  start_local_runtime.sh
scripts/make/: build.mk
server/: .gitignore  BUILD  Dockerfile  README.md  WORKSPACE  buf.yaml  go.mod  go.sum  repositories.bzl  tools.go
server/cmd/dummer/: BUILD.bazel  main.go
server/cmd/dummy/: BUILD.bazel  main.go
server/cmd/dummy/idl/: dummy.proto
server/idl/: dummer.proto  dummy.proto
server/pkg/dummer/v1/: BUILD.bazel  dummer_service.proto
server/pkg/dummer_gen/: dummer.pb.go  dummer.pb.gw.go
server/pkg/dummy/v1/: BUILD.bazel  dummy.proto  dummy_service.proto
server/pkg/dummy_gen/: dummy.pb.go  dummy.pb.gw.go
server/pkg/insecure/: certs.go  utils.go
terraform/: .gitignore  README.md
terraform/docn/: database.tf  dbcluster.tf  dbfirewall.tf  doks.tf  main.tf  vpc.tf
tools/bash/: gencert.sh  gensecret.sh  start_local_runtime.sh
tools/make/: build.mk
tools/starlark/helm/: README.md  helm_template.bzl  repository_rules.bzl
tools/starlark/jupyter/: README.md  generate_file.bzl  jupyter_bazel.bzl
