load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

android_binary(
    name = "app_binary",
    custom_package = "xyz.fjarm.app",
    manifest = "src/main/AndroidManifest.xml",
    deps = [
        "//android/app:app_lib",
    ],
)

kt_android_library(
    name = "app_lib",
    srcs = glob(["src/main/java/xyz/fjarm/app/*.kt"]),
    custom_package = "xyz.fjarm.app",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//:__pkg__"],
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_fragment_fragment",
        "@maven//:androidx_lifecycle_lifecycle_common",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk8",
    ],
)
