load("//tools/starlark/helm:helm_template.bzl", "helm_template")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

helm_template(
    name = "cert-manager",
    chart_tar = "@cert-manager//:chart.tgz",
    namespace = "cert-manager",
    values = {
        "installCRDs": "true",
    },
)

k8s_object(
    name = "cert-manager-namespace",
    cluster = "minikube",
    template = ":cert-manager-namespace.yaml",
)

k8s_object(
    name = "cert-manager-ca-secret",
    cluster = "minikube",
    resolver = "//golang/internal/certs:certs",
    template = ":cert-manager-ca-secret.yaml",
)

k8s_object(
    name = "cert-manager-object",
    cluster = "minikube",
    template = ":cert-manager",
)

k8s_object(
    name = "cert-manager-clusterissuer",
    cluster = "minikube",
    template = ":cert-manager-ca-clusterissuer.yaml",
)

k8s_objects(
    name = "cert-manager-bootstrap",
    objects = [
        ":cert-manager-namespace",
        ":cert-manager-ca-secret",
        ":cert-manager-object",
    ],
)
