load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

go_library(
    name = "dummer-lib",
    srcs = ["main.go"],
    importpath = "github.com/veganafro/mono/golang/cmd/dummer",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/dummer/v1:dummer",
        "//golang/internal/logwrapper:logwrapper",
        "//golang/pkg/dummer/v1:dummer",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "dummer-bin",
    embed = [":dummer-lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "dummer-go-image-base",
    base = "@debian_base//image",
    env = {
        "PORT": "8001",
    },
)

go_image(
    name = "dummer-go-image",
    base = ":dummer-go-image-base",
    embed = [":dummer-lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "dummer-go-image-push",
    format = "OCI",
    image = ":dummer-go-image",
    registry = "index.docker.io",
    repository = "veganafro/dummer_image",
    tag = "dev",
)

k8s_object(
    name = "dummer-namespace",
    cluster = "$(CLUSTER)",
    template = ":dummer-namespace.yaml",
)

k8s_object(
    name = "dummer-serviceaccount",
    cluster = "$(CLUSTER)",
    template = ":dummer-serviceaccount.yaml",
)

k8s_object(
    name = "dummer-service",
    cluster = "$(CLUSTER)",
    template = ":dummer-service.yaml",
)

k8s_object(
    name = "dummer-deployment",
    cluster = "$(CLUSTER)",
    images = {
        "veganafro/dummer_image:dev": ":dummer-go-image",
    },
    template = ":dummer-deployment.yaml",
)

k8s_object(
    name = "dummer-servicedefault",
    cluster = "$(CLUSTER)",
    template = ":dummer-servicedefault.yaml",
)

k8s_object(
    name = "dummer-ingress",
    cluster = "$(CLUSTER)",
    template = ":dummer-ingress.yaml",
)

k8s_objects(
    name = "dummer-all",
    objects = [
        ":dummer-namespace",
        ":dummer-serviceaccount",
        ":dummer-service",
        ":dummer-deployment",
        ":dummer-servicedefault",
        ":dummer-ingress",
    ],
)
