load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "dummer-lib",
    srcs = ["main.go"],
    importpath = "github.com/veganafro/mono/golang/cmd/dummer",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/dummer/v1:dummer",
        "//golang/internal/logwrapper:logwrapper",
        "//golang/pkg/dummer/v1:dummer",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "dummer-bin",
    embed = [":dummer-lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "dummer-go-image-base",
    base = "@debian_base//image",
    env = {
        "PORT": "8001",
    },
)

go_image(
    name = "dummer-go-image",
    base = ":dummer-go-image-base",
    embed = [":dummer-lib"],
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:public"],
)

container_push(
    name = "dummer-go-image-push",
    format = "OCI",
    image = ":dummer-go-image",
    registry = "index.docker.io",
    repository = "veganafro/dummer_image",
    tag = "dev",
)
