load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

go_library(
    name = "dummy_lib",
    srcs = ["main.go"],
    importpath = "github.com/veganafro/mono/golang/cmd/dummy",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/dummy/v1:dummy",
        "//golang/internal/logwrapper:logwrapper",
        "//golang/pkg/dummy/v1:dummy",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "dummy",
    embed = [":dummy_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "dummy_go_image_base",
    base = "@debian_base//image",
    env = {
        "PORT": "8000",
    },
)

go_image(
    name = "dummy_go_image",
    base = ":dummy_go_image_base",
    embed = [":dummy_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "dummy_go_image_push",
    format = "OCI",
    image = ":dummy_go_image",
    registry = "index.docker.io",
    repository = "veganafro/dummy_image",
    tag = "dev",
)

k8s_object(
    name = "dummy_all",
    cluster = "minikube",
    images = {
        "veganafro/dummy_image:dev": ":dummy_go_image",
    },
    template = ":dummy-all.yaml",
)
