load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

go_library(
    name = "dummy-lib",
    srcs = ["main.go"],
    importpath = "github.com/veganafro/mono/golang/cmd/dummy",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/dummy/v1:dummy",
        "//golang/internal/logwrapper:logwrapper",
        "//golang/pkg/dummy/v1:dummy",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "dummy-bin",
    embed = [":dummy-lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "dummy-go-image-base",
    base = "@debian_base//image",
    env = {
        "PORT": "8000",
    },
)

go_image(
    name = "dummy-go-image",
    base = ":dummy-go-image-base",
    embed = [":dummy-lib"],
    # SEE: https://github.com/bazelbuild/bazel/issues/10134#issuecomment-1079880746
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:public"],
)

container_push(
    name = "dummy-go-image-push",
    format = "OCI",
    image = ":dummy-go-image",
    registry = "index.docker.io",
    repository = "veganafro/dummy_image",
    tag = "dev",
)

k8s_object(
    name = "dummy-namespace",
    cluster = "$(CLUSTER)",
    template = ":dummy-namespace.yaml",
)

k8s_object(
    name = "dummy-serviceaccount",
    cluster = "$(CLUSTER)",
    template = ":dummy-serviceaccount.yaml",
)

k8s_object(
    name = "dummy-service",
    cluster = "$(CLUSTER)",
    template = ":dummy-service.yaml",
)

k8s_object(
    name = "dummy-deployment",
    cluster = "$(CLUSTER)",
    images = {
        "veganafro/dummy_image:dev": ":dummy-go-image",
    },
    template = ":dummy-deployment.yaml",
)

k8s_object(
    name = "dummy-servicedefault",
    cluster = "$(CLUSTER)",
    template = ":dummy-servicedefault.yaml",
)

k8s_object(
    name = "dummy-ingress",
    cluster = "$(CLUSTER)",
    template = ":dummy-ingress.yaml",
)

k8s_objects(
    name = "dummy-all",
    objects = [
        ":dummy-namespace",
        ":dummy-serviceaccount",
        ":dummy-service",
        ":dummy-deployment",
        ":dummy-servicedefault",
        ":dummy-ingress",
    ],
)
