load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "resolvinator",
    importpath = "github.com/veganafro/mono/golang/internal/resolvinator",
    srcs = [
        "builder.go",
        "register.go",
        "resolver.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_consul_api//:go_default_library",
        "@org_golang_google_grpc//resolver",
    ],
)
