load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "dummer_to_dummy_allow",
    cluster = "minikube",
    template = "dummer-to-dummy-allow.yaml",
)

k8s_objects(
    name = "intentions_all",
    objects = [
        ":dummer_to_dummy_allow",
    ],
)
