load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "currency_v1",
    srcs = [
        "currency.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

proto_library(
    name = "currency_service_v1",
    srcs = [
        "currency_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":currency_v1",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
