load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

proto_library(
    name = "dummer_service_v1_proto",
    srcs = ["dummer_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/dummy/v1:dummy_v1_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

pkg_tar(
    name = "dummer_v1_tar",
    mode = "0755",
    package_dir = "/",
    srcs = [
        "BUILD.bazel",
        "dummer_service.proto",
    ],
    strip_prefix = "/",
    visibility = ["//visibility:public"],
)
