load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "dummer_service_v1_proto",
    srcs = ["dummer_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/dummy/v1:dummy_v1_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
