load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

proto_library(
    name = "dummest_v1_proto",
    srcs = [
        "dummest.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

proto_library(
    name = "dummest_service_v1_proto",
    srcs = [
        "dummest_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":dummest_v1_proto",
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

pkg_tar(
    name = "pkg_dummy_v1_tar",
    mode = "0755",
    package_dir = "/",
    srcs = [
        "BUILD.bazel",
        "dummest.proto",
        "dummest_service.proto",
    ],
    strip_prefix = "/",
    visibility = ["//visibility:public"],
)
