load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "dummest_v1_proto",
    srcs = [
        "dummest.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

proto_library(
    name = "dummest_service_v1_proto",
    srcs = [
        "dummest_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":dummest_v1_proto",
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
