load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "dummy_v1_proto",
    srcs = ["dummy.proto"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

proto_library(
    name = "dummy_service_v1_proto",
    srcs = ["dummy_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":dummy_v1_proto",
        "@com_google_protobuf//:empty_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
