load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "dummer_lib",
    srcs = ["main.go"],
    importpath = "github.com/veganafro/mono/cmd/dummer",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/dummer/v1:dummer",
        "//pkg/dummy/v1:dummy",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "dummer",
    embed = [":dummer_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "cmd_dummer_tar",
    mode = "0755",
    package_dir = "/",
    srcs = [
        "BUILD.bazel",
        "main.go",
    ],
    strip_prefix = "/",
)

container_image(
    name = "dummer_image",
    base = "@bazel_3_5_0//image",
    entrypoint = ["bazel", "run", "//cmd/dummer:dummer"],
    env = {
        "PORT": "8001",
    },
    repository = "veganafro",
    tars = [
        ":cmd_dummer_tar",
        "//:build_tar",
        "//:workspace_tar",
        "//pkg/dummy/v1:pkg_dummy_v1_tar",
        "//pkg/dummer/v1:pkg_dummer_v1_tar",
    ],
)

container_push(
    name = "dummer_push",
    format = "Docker",
    image = ":dummer_image",
    registry = "index.docker.io",
    repository = "veganafro/dummer_image",
    tag = "dev",
)
