load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dummy_lib",
    srcs = ["main.go"],
    importpath = "github.com/veganafro/mono/cmd/dummy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/dummy/v1:dummy",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "dummy",
    embed = [":dummy_lib"],
    visibility = ["//visibility:public"],
)
