load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "dummy-namespace",
    cluster = "minikube",
    template = ":dummy-namespace.yaml",
)

k8s_object(
    name = "dummy-serviceaccount",
    cluster = "minikube",
    template = ":dummy-serviceaccount.yaml",
)

k8s_object(
    name = "dummy-service",
    cluster = "minikube",
    template = ":dummy-service.yaml",
)

k8s_object(
    name = "dummy-deployment",
    cluster = "minikube",
    images = {
        "veganafro/dummy_image:dev": "//golang/cmd/dummy:dummy-go-image",
    },
    template = ":dummy-deployment.yaml",
)

k8s_object(
    name = "dummy-servicedefault",
    cluster = "minikube",
    template = ":dummy-servicedefault.yaml",
)

k8s_objects(
    name = "dummy-all",
    objects = [
        ":dummy-namespace",
        ":dummy-serviceaccount",
        ":dummy-service",
        ":dummy-deployment",
        ":dummy-servicedefault",
    ],
)
